tests/derive/arguments_file_writeonly.stderr
error: proc-macro derive panicked
 --> tests/derive/arguments_file_writeonly.rs:3:10
  |
3 | #[derive(Arguments)]
  |          ^^^^^^^^^
  |
  = help: message: cannot open help-string file: Os { code: 13, kind: PermissionDenied, message: "Permission denied" }

error[E0277]: the trait bound `Arg: uutils_args::Arguments` is not satisfied
 --> tests/derive/arguments_file_writeonly.rs:9:6
  |
9 | impl Options<Arg> for Settings {
  |      ^^^^^^^^^^^^ the trait `uutils_args::Arguments` is not implemented for `Arg`
  |
note: required by a bound in `Options`
 --> src/lib.rs
  |
  | pub trait Options<Arg: Arguments>: Sized {
  |                        ^^^^^^^^^ required by this bound in `Options`

error[E0277]: the trait bound `Arg: uutils_args::Arguments` is not satisfied
  --> tests/derive/arguments_file_writeonly.rs:16:17
   |
16 |     Settings {}.parse(std::env::args_os()).unwrap();
   |                 ^^^^^ the trait `uutils_args::Arguments` is not implemented for `Arg`
   |
note: required by a bound in `uutils_args::Options::parse`
  --> src/lib.rs
   |
   | pub trait Options<Arg: Arguments>: Sized {
   |                        ^^^^^^^^^ required by this bound in `Options::parse`
...
   |     fn parse<I>(mut self, args: I) -> Result<(Self, Vec<OsString>), Error>
   |        ----- required by a bound in this associated function
